--- a/SimpleWeather.Shared/Resources/Strings/Resources.es.resx
+++ b/SimpleWeather.Shared/Resources/Strings/Resources.es.resx
@@ -172,11 +172,18 @@
   <data name="label_back" xml:space="preserve">
     <value>Atrás</value>
   </data>
+  <data name="title_activity_weather_now" xml:space="preserve">
+    <value>Tiempo</value>
+    <comment>MainActivity</comment>
+  </data>
   <data name="action_settings" xml:space="preserve">
     <value>Ajustes</value>
   </data>
   <data name="action_retry" xml:space="preserve">
     <value>Reintentar</value>
+  </data>
+  <data name="placeholder_text" xml:space="preserve">
+    <value>•</value>
   </data>
   <data name="label_details" xml:space="preserve">
     <value>Detalles</value>
@@ -220,6 +227,7 @@
   </data>
   <data name="label_chance" xml:space="preserve">
     <value>Probabilidad</value>
+    <comment>Chance of Precipitation</comment>
   </data>
   <data name="label_cloudiness" xml:space="preserve">
     <value>Nubosidad</value>
@@ -262,6 +270,9 @@
   </data>
   <data name="label_airquality" xml:space="preserve">
     <value>Índice de calidad del aire</value>
+  </data>
+  <data name="label_airquality_short" xml:space="preserve">
+    <value>Calidad del aire</value>
   </data>
   <data name="label_radar" xml:space="preserve">
     <value>Radar</value>
@@ -328,6 +339,9 @@
   <data name="pref_category_providers" xml:space="preserve">
     <value>Proveedores del tiempo</value>
   </data>
+  <data name="copyright_here" xml:space="preserve">
+    <value>The HERE Logo is a trademark or registered trademark of HERE Global B.V.</value>
+  </data>
   <data name="pref_summary_currentlocation" xml:space="preserve">
     <value>Permitir acceso a la ubicación actual vía GPS</value>
   </data>
@@ -337,14 +351,26 @@
   <data name="message_enter_apikey" xml:space="preserve">
     <value>Por favor introduzca una clave de proveedor</value>
   </data>
+  <data name="message_keyverified" xml:space="preserve">
+    <value>Clave verificada</value>
+  </data>
+  <data name="message_keyinvalid" xml:space="preserve">
+    <value>Clave inválida</value>
+  </data>
   <data name="pref_title_onnotification" xml:space="preserve">
     <value>Notificación meteorológica</value>
+  </data>
+  <data name="pref_summary_notification" xml:space="preserve">
+    <value>Muestra notificación persistente con las condiciones actuales del tiempo</value>
   </data>
   <data name="pref_title_api" xml:space="preserve">
     <value>Proveedor del tiempo</value>
   </data>
   <data name="pref_category_notification" xml:space="preserve">
     <value>Notificaciones</value>
+  </data>
+  <data name="pref_title_notificationicon" xml:space="preserve">
+    <value>Icono de notificación</value>
   </data>
   <data name="pref_title_alerts" xml:space="preserve">
     <value>Alertas del tiempo</value>
@@ -385,6 +411,10 @@
   <data name="error_retrieve_location" xml:space="preserve">
     <value>No se puede obtener la ubicación</value>
   </data>
+  <data name="error_enable_location_services" xml:space="preserve">
+    <value>Servicios de localización desactivados. Habilítelos en los Ajustes</value>
+    <comment>Fuzzy</comment>
+  </data>
   <data name="error_noresults" xml:space="preserve">
     <value>Sin resultados</value>
   </data>
@@ -402,6 +432,11 @@
   </data>
   <data name="delete" xml:space="preserve">
     <value>Borrar</value>
+  </data>
+  <data name="bg_location_permission_rationale" xml:space="preserve">
+    <value>Permitir el acceso a la actualización de la ubicación en segundo plano para las notificaciones y los widgets</value>
+    <comment>Background Location Permission
+Fuzzy</comment>
   </data>
   <data name="werror_noweather" xml:space="preserve">
     <value>No se pueden cargar los datos del tiempo</value>
@@ -448,6 +483,42 @@ Fuzzy</comment>
   <data name="update_prefix_day" xml:space="preserve">
     <value>Actualizado a las</value>
   </data>
+  <data name="notificationicon_temperature" xml:space="preserve">
+    <value>Temperatura</value>
+    <comment>Notification</comment>
+  </data>
+  <data name="notificationicon_condition" xml:space="preserve">
+    <value>Condiciones del tiempo</value>
+    <comment>Fuzzy</comment>
+  </data>
+  <data name="not_channel_name_weather" xml:space="preserve">
+    <value>Notificaciones del tiempo</value>
+  </data>
+  <data name="not_channel_desc_weather" xml:space="preserve">
+    <value>Notificaciones del tiempo</value>
+  </data>
+  <data name="not_channel_name_alerts" xml:space="preserve">
+    <value>Alertas del tiempo</value>
+  </data>
+  <data name="not_channel_desc_alerts" xml:space="preserve">
+    <value>Notificaciones de alertas del tiempo</value>
+  </data>
+  <data name="not_channel_name_general" xml:space="preserve">
+    <value>Notificaciones de servicio</value>
+  </data>
+  <data name="datetime_day_ago" xml:space="preserve">
+    <value>Hace %1$dd</value>
+    <comment>Alerts</comment>
+  </data>
+  <data name="datetime_hr_ago" xml:space="preserve">
+    <value>Hace %1$dh</value>
+  </data>
+  <data name="datetime_min_ago" xml:space="preserve">
+    <value>Hace %1$dm</value>
+  </data>
+  <data name="datetime_sec_ago" xml:space="preserve">
+    <value>Hace %1$ds</value>
+  </data>
   <data name="datetime_validuntil" xml:space="preserve">
     <value>Válido hasta el</value>
   </data>
@@ -468,6 +539,9 @@ Fuzzy</comment>
   </data>
   <data name="userthememode_dark" xml:space="preserve">
     <value>Oscuro</value>
+  </data>
+  <data name="userthememode_black" xml:space="preserve">
+    <value>Oscuro (AMOLED)</value>
   </data>
   <data name="userthememode_light" xml:space="preserve">
     <value>Claro</value>
@@ -521,6 +595,28 @@ Fuzzy</comment>
   <data name="summary_default" xml:space="preserve">
     <value>Por defecto</value>
     <comment>Fuzzy</comment>
+  </data>
+  <data name="clock_12_hours_ampm_format" xml:space="preserve">
+    <value>h:mm&lt;small&gt;a&lt;/small&gt;</value>
+    <comment>format strings for clocks</comment>
+  </data>
+  <data name="clock_12_hours_format" xml:space="preserve">
+    <value>h:mm</value>
+  </data>
+  <data name="clock_24_hours_format" xml:space="preserve">
+    <value>HH:mm</value>
+  </data>
+  <data name="widget_long_date_format" xml:space="preserve">
+    <value>cccc, MMMM dd</value>
+    <comment>Widget: Full day and month</comment>
+  </data>
+  <data name="widget_4x2_date_format" xml:space="preserve">
+    <value>ccc, MMMM dd</value>
+    <comment>Widget: Abbreviated day and full month</comment>
+  </data>
+  <data name="widget_short_date_format" xml:space="preserve">
+    <value>ccc, MMM dd</value>
+    <comment>Widget: Abbreviated day and month</comment>
   </data>
   <data name="API_Box.PlaceholderText" xml:space="preserve">
     <value>Seleccionar proveedor del tiempo</value>
@@ -582,6 +678,14 @@ Fuzzy</comment>
   </data>
   <data name="label_windgust" xml:space="preserve">
     <value>Ráfaga de viento</value>
+  </data>
+  <data name="widget_4x1_date_format" xml:space="preserve">
+    <value>cccc, MMM dd</value>
+    <comment>Widget: Full day and abbreviated month</comment>
+  </data>
+  <data name="forecast_date_format" xml:space="preserve">
+    <value>EEE dd</value>
+    <comment>Forecast pattern: Day and date (ex. Mon 14)</comment>
   </data>
   <data name="CheckUpdatePrompt.Text" xml:space="preserve">
     <value>Comprobando las actualizaciones...</value>
@@ -660,6 +764,12 @@ Fuzzy</comment>
   </data>
   <data name="default_units_metric" xml:space="preserve">
     <value>°C, km/h, mm, mb, km</value>
+  </data>
+  <data name="radar_rainviewer" xml:space="preserve">
+    <value>RainViewer</value>
+  </data>
+  <data name="not_title_weather_update" xml:space="preserve">
+    <value>Actualizando el tiempo…</value>
   </data>
   <data name="FeatureOption_TileBackground.Content" xml:space="preserve">
     <value>Imagen de fondo del icono</value>
@@ -759,8 +869,22 @@ Fuzzy</comment>
   <data name="title_dev_settings" xml:space="preserve">
     <value>Dev Settings</value>
   </data>
+  <data name="bg_location_permission_rationale_settings" xml:space="preserve">
+    <value>Para actualizar la ubicación en segundo plano para las notificaciones y los widgets, establezca el permiso de ubicación en &apos;%1$s&apos;</value>
+    <comment>Fuzzy</comment>
+  </data>
   <data name="prompt_location_not_set" xml:space="preserve">
     <value>La ubicación no está establecida. Por favor, añada una ubicación</value>
+  </data>
+  <data name="title_bg_location_access" xml:space="preserve">
+    <value>Acceso a la ubicación en segundo plano</value>
+    <comment>Background Location Permission</comment>
+  </data>
+  <data name="wear_bg_location_permission_rationale" xml:space="preserve">
+    <value>Permitir el acceso a la actualización de la ubicación en segundo plano para los azulejos y las complicaciones</value>
+  </data>
+  <data name="wear_bg_location_permission_rationale_settings" xml:space="preserve">
+    <value>Para actualizar la ubicación en segundo plano para los mosaicos y las complicaciones, establezca el permiso de ubicación en &apos;%1$s&apos;</value>
   </data>
   <data name="time_current" xml:space="preserve">
     <value>Actual</value>
@@ -771,6 +895,10 @@ Fuzzy</comment>
   </data>
   <data name="api_tomorrowio" xml:space="preserve">
     <value>Tomorrow.io</value>
+  </data>
+  <data name="label_minutelyforecast" xml:space="preserve">
+    <value>Previsión de minutos</value>
+    <comment>Fuzzy</comment>
   </data>
   <data name="Precipitation_Minutely_Starting_Text_Format" xml:space="preserve">
     <value>La lluvia comenzará en unos {0}</value>
@@ -834,7 +962,40 @@ Fuzzy</comment>
   <data name="api_eccc" xml:space="preserve">
     <value>Environment and Climate Change Canada (ECCC)</value>
   </data>
+  <data name="text_label_value" xml:space="preserve">
+    <value>%1$s %2$s</value>
+  </data>
+  <data name="label_count_low_short" xml:space="preserve">
+    <value>Bajo</value>
+  </data>
+  <data name="label_count_moderate_short" xml:space="preserve">
+    <value>Medio</value>
+  </data>
+  <data name="label_count_high_short" xml:space="preserve">
+    <value>Alto</value>
+  </data>
+  <data name="label_count_veryhigh_short" xml:space="preserve">
+    <value>Alto</value>
+  </data>
   <data name="werror_ratelimited" xml:space="preserve">
     <value>Demasiadas solicitudes. Vuelva a intentarlo pasados unos minutos</value>
+  </data>
+  <data name="werror_locationnotsupported" xml:space="preserve">
+    <value>Esta ubicación no es compatible con este proveedor meteorológico</value>
+  </data>
+  <data name="api_accuweather" xml:space="preserve">
+    <value>AccuWeather</value>
+  </data>
+  <data name="Precipitation_Likely_Text_Format" xml:space="preserve">
+    <value>Probabilidad de lluvia alrededor de las {0} ({1}% de probabilidad)</value>
+    <comment>{0} - Time, {1} - %Chance</comment>
+  </data>
+  <data name="Precipitation_Likely_Minutely_Starting_Text_Format" xml:space="preserve">
+    <value>Se espera que la lluvia comience alrededor de las {0}</value>
+    <comment>{0} - Time</comment>
+  </data>
+  <data name="Precipitation_Likely_Minutely_Stopping_Text_Format" xml:space="preserve">
+    <value>Se espera que la lluvia pare alrededor de las {0}</value>
+    <comment>{0} - Time</comment>
   </data>
 </root>
