--- a/SimpleWeather.Shared/Resources/Strings/Resources.fr.resx
+++ b/SimpleWeather.Shared/Resources/Strings/Resources.fr.resx
@@ -172,11 +172,18 @@
   <data name="label_back" xml:space="preserve">
     <value>Retour</value>
   </data>
+  <data name="title_activity_weather_now" xml:space="preserve">
+    <value>Météo</value>
+    <comment>MainActivity</comment>
+  </data>
   <data name="action_settings" xml:space="preserve">
     <value>Paramètres</value>
   </data>
   <data name="action_retry" xml:space="preserve">
     <value>Réessayer</value>
+  </data>
+  <data name="placeholder_text" xml:space="preserve">
+    <value>•</value>
   </data>
   <data name="label_details" xml:space="preserve">
     <value>Détails</value>
@@ -220,6 +227,7 @@
   </data>
   <data name="label_chance" xml:space="preserve">
     <value>Chance</value>
+    <comment>Chance of Precipitation</comment>
   </data>
   <data name="label_cloudiness" xml:space="preserve">
     <value>Nébulosité</value>
@@ -262,6 +270,9 @@
   </data>
   <data name="label_airquality" xml:space="preserve">
     <value>Indice de la qualité de l&apos;air</value>
+  </data>
+  <data name="label_airquality_short" xml:space="preserve">
+    <value>Qualité de l&apos;air</value>
   </data>
   <data name="label_radar" xml:space="preserve">
     <value>Radar</value>
@@ -328,6 +339,9 @@
   <data name="pref_category_providers" xml:space="preserve">
     <value>Fournisseurs de données</value>
   </data>
+  <data name="copyright_here" xml:space="preserve">
+    <value>The HERE Logo is a trademark or registered trademark of HERE Global B.V.</value>
+  </data>
   <data name="pref_summary_currentlocation" xml:space="preserve">
     <value>Permettre l&apos;accès à la position actuelle via le GPS</value>
   </data>
@@ -337,14 +351,26 @@
   <data name="message_enter_apikey" xml:space="preserve">
     <value>Veuillez entrer une clé de fournisseur</value>
   </data>
+  <data name="message_keyverified" xml:space="preserve">
+    <value>Clé vérifiée</value>
+  </data>
+  <data name="message_keyinvalid" xml:space="preserve">
+    <value>Clé invalide</value>
+  </data>
   <data name="pref_title_onnotification" xml:space="preserve">
     <value>Notification de météo</value>
+  </data>
+  <data name="pref_summary_notification" xml:space="preserve">
+    <value>Afficher une notification permanente qui indique les conditions météo actuelles</value>
   </data>
   <data name="pref_title_api" xml:space="preserve">
     <value>Fournisseur de météo</value>
   </data>
   <data name="pref_category_notification" xml:space="preserve">
     <value>Notifications</value>
+  </data>
+  <data name="pref_title_notificationicon" xml:space="preserve">
+    <value>Icône de notification</value>
   </data>
   <data name="pref_title_alerts" xml:space="preserve">
     <value>Alertes météo</value>
@@ -384,6 +410,9 @@
   <data name="error_retrieve_location" xml:space="preserve">
     <value>Impossible d&apos;obtenir la localisation</value>
   </data>
+  <data name="error_enable_location_services" xml:space="preserve">
+    <value>Services de localisation désactivés. Veuillez l&apos;activer dans les paramètres</value>
+  </data>
   <data name="error_noresults" xml:space="preserve">
     <value>Aucun résultat trouvé</value>
   </data>
@@ -401,6 +430,10 @@
   </data>
   <data name="delete" xml:space="preserve">
     <value>Supprimer</value>
+  </data>
+  <data name="bg_location_permission_rationale" xml:space="preserve">
+    <value>Autoriser l&apos;accès à la mise à jour de la localisation en arrière-plan pour les notifications et les widgets</value>
+    <comment>Background Location Permission</comment>
   </data>
   <data name="werror_noweather" xml:space="preserve">
     <value>Impossible de charger les données météo</value>
@@ -443,6 +476,41 @@
   <data name="update_prefix_day" xml:space="preserve">
     <value>Mise à jour à</value>
   </data>
+  <data name="notificationicon_temperature" xml:space="preserve">
+    <value>Température</value>
+    <comment>Notification</comment>
+  </data>
+  <data name="notificationicon_condition" xml:space="preserve">
+    <value>Conditions météo</value>
+  </data>
+  <data name="not_channel_name_weather" xml:space="preserve">
+    <value>Notifications météo</value>
+  </data>
+  <data name="not_channel_desc_weather" xml:space="preserve">
+    <value>Notifications météo</value>
+  </data>
+  <data name="not_channel_name_alerts" xml:space="preserve">
+    <value>Alertes météo</value>
+  </data>
+  <data name="not_channel_desc_alerts" xml:space="preserve">
+    <value>Notifications pour les alertes météo</value>
+  </data>
+  <data name="not_channel_name_general" xml:space="preserve">
+    <value>Notifications de service</value>
+  </data>
+  <data name="datetime_day_ago" xml:space="preserve">
+    <value>il y a %1$dj</value>
+    <comment>Alerts</comment>
+  </data>
+  <data name="datetime_hr_ago" xml:space="preserve">
+    <value>il y a %1$dh</value>
+  </data>
+  <data name="datetime_min_ago" xml:space="preserve">
+    <value>il y a %1$dm</value>
+  </data>
+  <data name="datetime_sec_ago" xml:space="preserve">
+    <value>il y a %1$ds</value>
+  </data>
   <data name="datetime_validuntil" xml:space="preserve">
     <value>Valable jusqu&apos;en</value>
   </data>
@@ -462,6 +530,9 @@
   </data>
   <data name="userthememode_dark" xml:space="preserve">
     <value>Foncé</value>
+  </data>
+  <data name="userthememode_black" xml:space="preserve">
+    <value>Foncé (AMOLED)</value>
   </data>
   <data name="userthememode_light" xml:space="preserve">
     <value>Clair</value>
@@ -514,6 +585,28 @@
   </data>
   <data name="summary_default" xml:space="preserve">
     <value>Défaut</value>
+  </data>
+  <data name="clock_12_hours_ampm_format" xml:space="preserve">
+    <value>h:mm&lt;small&gt;a&lt;/small&gt;</value>
+    <comment>format strings for clocks</comment>
+  </data>
+  <data name="clock_12_hours_format" xml:space="preserve">
+    <value>h:mm</value>
+  </data>
+  <data name="clock_24_hours_format" xml:space="preserve">
+    <value>HH:mm</value>
+  </data>
+  <data name="widget_long_date_format" xml:space="preserve">
+    <value>cccc, MMMM dd</value>
+    <comment>Widget: Full day and month</comment>
+  </data>
+  <data name="widget_4x2_date_format" xml:space="preserve">
+    <value>ccc, MMMM dd</value>
+    <comment>Widget: Abbreviated day and full month</comment>
+  </data>
+  <data name="widget_short_date_format" xml:space="preserve">
+    <value>ccc, MMM dd</value>
+    <comment>Widget: Abbreviated day and month</comment>
   </data>
   <data name="API_Box.PlaceholderText" xml:space="preserve">
     <value>Choisir un fournisseur de services météo</value>
@@ -576,6 +669,14 @@
   <data name="label_windgust" xml:space="preserve">
     <value>Rafale de vent</value>
   </data>
+  <data name="widget_4x1_date_format" xml:space="preserve">
+    <value>cccc, MMM dd</value>
+    <comment>Widget: Full day and abbreviated month</comment>
+  </data>
+  <data name="forecast_date_format" xml:space="preserve">
+    <value>EEE dd</value>
+    <comment>Forecast pattern: Day and date (ex. Mon 14)</comment>
+  </data>
   <data name="CheckUpdatePrompt.Text" xml:space="preserve">
     <value>Vérifier les mises à jour...</value>
   </data>
@@ -610,7 +711,6 @@
   </data>
   <data name="pref_summary_feedback" xml:space="preserve">
     <value>Rapporter tout problème ou suggestion pour améliorer l&apos;application</value>
-    <comment>&apos;Bug&apos; can be replaced with &apos;issue&apos;</comment>
   </data>
   <data name="pref_title_rateandreview" xml:space="preserve">
     <value>Évaluer et réviser</value>
@@ -647,6 +747,12 @@
   </data>
   <data name="default_units_metric" xml:space="preserve">
     <value>°C, km/h, mm, mb, km</value>
+  </data>
+  <data name="radar_rainviewer" xml:space="preserve">
+    <value>RainViewer</value>
+  </data>
+  <data name="not_title_weather_update" xml:space="preserve">
+    <value>Mise à jour de la météo…</value>
   </data>
   <data name="FeatureOption_TileBackground.Content" xml:space="preserve">
     <value>Image d&apos;arrière-plan de vignette</value>
@@ -740,8 +846,21 @@ Fuzzy</comment>
   <data name="title_dev_settings" xml:space="preserve">
     <value>Dev Settings</value>
   </data>
+  <data name="bg_location_permission_rationale_settings" xml:space="preserve">
+    <value>Pour mettre à jour la localisation en arrière-plan pour les notifications et les widgets, veuillez définir l&apos;autorisation de localisation sur &apos;%1$s&apos;</value>
+  </data>
   <data name="prompt_location_not_set" xml:space="preserve">
     <value>L&apos;emplacement n&apos;est pas défini. Veuillez ajouter un emplacement</value>
+  </data>
+  <data name="title_bg_location_access" xml:space="preserve">
+    <value>Accès à l&apos;emplacement en arrière-plan</value>
+    <comment>Background Location Permission</comment>
+  </data>
+  <data name="wear_bg_location_permission_rationale" xml:space="preserve">
+    <value>Autoriser l&apos;accès à la mise à jour de la localisation en arrière-plan pour les tuiles et les complications</value>
+  </data>
+  <data name="wear_bg_location_permission_rationale_settings" xml:space="preserve">
+    <value>Pour mettre à jour la localisation en arrière-plan pour les tuiles et les complications, veuillez définir l&apos;autorisation de localisation sur &apos;%1$s&apos;</value>
   </data>
   <data name="time_current" xml:space="preserve">
     <value>Actuel</value>
@@ -752,6 +871,10 @@ Fuzzy</comment>
   </data>
   <data name="api_tomorrowio" xml:space="preserve">
     <value>Tomorrow.io</value>
+  </data>
+  <data name="label_minutelyforecast" xml:space="preserve">
+    <value>Prévisions à la minute</value>
+    <comment>Fuzzy</comment>
   </data>
   <data name="Precipitation_Minutely_Starting_Text_Format" xml:space="preserve">
     <value>La pluie va commencer dans environ {0}</value>
@@ -815,7 +938,40 @@ Fuzzy</comment>
   <data name="api_eccc" xml:space="preserve">
     <value>Environment and Climate Change Canada (ECCC)</value>
   </data>
+  <data name="text_label_value" xml:space="preserve">
+    <value>%1$s %2$s</value>
+  </data>
+  <data name="label_count_low_short" xml:space="preserve">
+    <value>Bas</value>
+  </data>
+  <data name="label_count_moderate_short" xml:space="preserve">
+    <value>Modéré</value>
+  </data>
+  <data name="label_count_high_short" xml:space="preserve">
+    <value>Élevé</value>
+  </data>
+  <data name="label_count_veryhigh_short" xml:space="preserve">
+    <value>Élevé</value>
+  </data>
   <data name="werror_ratelimited" xml:space="preserve">
     <value>Trop de demandes. Veuillez réessayer après quelques minutes</value>
+  </data>
+  <data name="werror_locationnotsupported" xml:space="preserve">
+    <value>Cet emplacement n&apos;est pas pris en charge par ce fournisseur météo</value>
+  </data>
+  <data name="api_accuweather" xml:space="preserve">
+    <value>AccuWeather</value>
+  </data>
+  <data name="Precipitation_Likely_Text_Format" xml:space="preserve">
+    <value>Pluie probable vers {0} (probabilité de {1}%)</value>
+    <comment>{0} - Time, {1} - %Chance</comment>
+  </data>
+  <data name="Precipitation_Likely_Minutely_Starting_Text_Format" xml:space="preserve">
+    <value>La pluie devrait commencer vers {0}</value>
+    <comment>{0} - Time</comment>
+  </data>
+  <data name="Precipitation_Likely_Minutely_Stopping_Text_Format" xml:space="preserve">
+    <value>La pluie devrait cesser vers {0}</value>
+    <comment>{0} - Time</comment>
   </data>
 </root>
