--- a/SimpleWeather.Shared/Resources/Strings/Resources.resx
+++ b/SimpleWeather.Shared/Resources/Strings/Resources.resx
@@ -172,11 +172,18 @@
   <data name="label_back" xml:space="preserve">
     <value>Back</value>
   </data>
+  <data name="title_activity_weather_now" xml:space="preserve">
+    <value>Weather</value>
+    <comment>MainActivity</comment>
+  </data>
   <data name="action_settings" xml:space="preserve">
     <value>Settings</value>
   </data>
   <data name="action_retry" xml:space="preserve">
     <value>Retry</value>
+  </data>
+  <data name="placeholder_text" xml:space="preserve">
+    <value>•</value>
   </data>
   <data name="label_details" xml:space="preserve">
     <value>Details</value>
@@ -220,6 +227,7 @@
   </data>
   <data name="label_chance" xml:space="preserve">
     <value>Chance</value>
+    <comment>Chance of Precipitation</comment>
   </data>
   <data name="label_cloudiness" xml:space="preserve">
     <value>Cloudiness</value>
@@ -262,6 +270,9 @@
   </data>
   <data name="label_airquality" xml:space="preserve">
     <value>Air Quality Index</value>
+  </data>
+  <data name="label_airquality_short" xml:space="preserve">
+    <value>Air Quality</value>
   </data>
   <data name="label_radar" xml:space="preserve">
     <value>Radar</value>
@@ -328,6 +339,9 @@
   <data name="pref_category_providers" xml:space="preserve">
     <value>Data Providers</value>
   </data>
+  <data name="copyright_here" xml:space="preserve">
+    <value>The HERE Logo is a trademark or registered trademark of HERE Global B.V.</value>
+  </data>
   <data name="pref_summary_currentlocation" xml:space="preserve">
     <value>Allow access to current location via GPS</value>
   </data>
@@ -337,14 +351,26 @@
   <data name="message_enter_apikey" xml:space="preserve">
     <value>Please enter a Provider Key</value>
   </data>
+  <data name="message_keyverified" xml:space="preserve">
+    <value>Key Verified</value>
+  </data>
+  <data name="message_keyinvalid" xml:space="preserve">
+    <value>Key Invalid</value>
+  </data>
   <data name="pref_title_onnotification" xml:space="preserve">
     <value>Weather Notification</value>
+  </data>
+  <data name="pref_summary_notification" xml:space="preserve">
+    <value>Show persistent notification displaying current weather conditions</value>
   </data>
   <data name="pref_title_api" xml:space="preserve">
     <value>Weather Provider</value>
   </data>
   <data name="pref_category_notification" xml:space="preserve">
     <value>Notifications</value>
+  </data>
+  <data name="pref_title_notificationicon" xml:space="preserve">
+    <value>Notification Icon</value>
   </data>
   <data name="pref_title_alerts" xml:space="preserve">
     <value>Weather Alerts</value>
@@ -384,6 +410,9 @@
   <data name="error_retrieve_location" xml:space="preserve">
     <value>Unable to get location</value>
   </data>
+  <data name="error_enable_location_services" xml:space="preserve">
+    <value>Location Services disabled. Please enable in Settings</value>
+  </data>
   <data name="error_noresults" xml:space="preserve">
     <value>No results found</value>
   </data>
@@ -401,6 +430,10 @@
   </data>
   <data name="delete" xml:space="preserve">
     <value>Delete</value>
+  </data>
+  <data name="bg_location_permission_rationale" xml:space="preserve">
+    <value>Allow access to update location in the background for notifications and widgets</value>
+    <comment>Background Location Permission</comment>
   </data>
   <data name="werror_noweather" xml:space="preserve">
     <value>Unable to load weather data</value>
@@ -443,6 +476,41 @@
   <data name="update_prefix_day" xml:space="preserve">
     <value>Updated at</value>
   </data>
+  <data name="notificationicon_temperature" xml:space="preserve">
+    <value>Temperature</value>
+    <comment>Notification</comment>
+  </data>
+  <data name="notificationicon_condition" xml:space="preserve">
+    <value>Weather Condition</value>
+  </data>
+  <data name="not_channel_name_weather" xml:space="preserve">
+    <value>Weather Notifications</value>
+  </data>
+  <data name="not_channel_desc_weather" xml:space="preserve">
+    <value>Weather notifications</value>
+  </data>
+  <data name="not_channel_name_alerts" xml:space="preserve">
+    <value>Weather Alerts</value>
+  </data>
+  <data name="not_channel_desc_alerts" xml:space="preserve">
+    <value>Notifications for weather alerts</value>
+  </data>
+  <data name="not_channel_name_general" xml:space="preserve">
+    <value>Service notifications</value>
+  </data>
+  <data name="datetime_day_ago" xml:space="preserve">
+    <value>%1$dd ago</value>
+    <comment>Alerts</comment>
+  </data>
+  <data name="datetime_hr_ago" xml:space="preserve">
+    <value>%1$dh ago</value>
+  </data>
+  <data name="datetime_min_ago" xml:space="preserve">
+    <value>%1$dm ago</value>
+  </data>
+  <data name="datetime_sec_ago" xml:space="preserve">
+    <value>%1$ds ago</value>
+  </data>
   <data name="datetime_validuntil" xml:space="preserve">
     <value>Valid until</value>
   </data>
@@ -462,6 +530,9 @@
   </data>
   <data name="userthememode_dark" xml:space="preserve">
     <value>Dark</value>
+  </data>
+  <data name="userthememode_black" xml:space="preserve">
+    <value>Dark (AMOLED)</value>
   </data>
   <data name="userthememode_light" xml:space="preserve">
     <value>Light</value>
@@ -514,6 +585,28 @@
   </data>
   <data name="summary_default" xml:space="preserve">
     <value>Default</value>
+  </data>
+  <data name="clock_12_hours_ampm_format" xml:space="preserve">
+    <value>h:mm&lt;small&gt;a&lt;/small&gt;</value>
+    <comment>format strings for clocks</comment>
+  </data>
+  <data name="clock_12_hours_format" xml:space="preserve">
+    <value>h:mm</value>
+  </data>
+  <data name="clock_24_hours_format" xml:space="preserve">
+    <value>HH:mm</value>
+  </data>
+  <data name="widget_long_date_format" xml:space="preserve">
+    <value>cccc, MMMM dd</value>
+    <comment>Widget: Full day and month</comment>
+  </data>
+  <data name="widget_4x2_date_format" xml:space="preserve">
+    <value>ccc, MMMM dd</value>
+    <comment>Widget: Abbreviated day and full month</comment>
+  </data>
+  <data name="widget_short_date_format" xml:space="preserve">
+    <value>ccc, MMM dd</value>
+    <comment>Widget: Abbreviated day and month</comment>
   </data>
   <data name="API_Box.PlaceholderText" xml:space="preserve">
     <value>Select Weather Provider</value>
@@ -575,6 +668,14 @@
   </data>
   <data name="label_windgust" xml:space="preserve">
     <value>Wind Gust</value>
+  </data>
+  <data name="widget_4x1_date_format" xml:space="preserve">
+    <value>cccc, MMM dd</value>
+    <comment>Widget: Full day and abbreviated month</comment>
+  </data>
+  <data name="forecast_date_format" xml:space="preserve">
+    <value>EEE dd</value>
+    <comment>Forecast pattern: Day and date (ex. Mon 14)</comment>
   </data>
   <data name="CheckUpdatePrompt.Text" xml:space="preserve">
     <value>Checking for updates...</value>
@@ -646,6 +747,12 @@
   </data>
   <data name="default_units_metric" xml:space="preserve">
     <value>°C, km/h, mm, mb, km</value>
+  </data>
+  <data name="radar_rainviewer" xml:space="preserve">
+    <value>RainViewer</value>
+  </data>
+  <data name="not_title_weather_update" xml:space="preserve">
+    <value>Updating weather…</value>
   </data>
   <data name="FeatureOption_TileBackground.Content" xml:space="preserve">
     <value>Tile Background Image</value>
@@ -738,8 +845,21 @@
   <data name="title_dev_settings" xml:space="preserve">
     <value>Dev Settings</value>
   </data>
+  <data name="bg_location_permission_rationale_settings" xml:space="preserve">
+    <value>To update location in the background for notifications and widgets, please set location permission to &apos;%1$s&apos;</value>
+  </data>
   <data name="prompt_location_not_set" xml:space="preserve">
     <value>Location not set. Please add a location</value>
+  </data>
+  <data name="title_bg_location_access" xml:space="preserve">
+    <value>Background Location Access</value>
+    <comment>Background Location Permission</comment>
+  </data>
+  <data name="wear_bg_location_permission_rationale" xml:space="preserve">
+    <value>Allow access to update location in the background for tiles and complications</value>
+  </data>
+  <data name="wear_bg_location_permission_rationale_settings" xml:space="preserve">
+    <value>To update location in the background for tiles and complications, please set location permission to &apos;%1$s&apos;</value>
   </data>
   <data name="time_current" xml:space="preserve">
     <value>Current</value>
@@ -750,6 +870,9 @@
   </data>
   <data name="api_tomorrowio" xml:space="preserve">
     <value>Tomorrow.io</value>
+  </data>
+  <data name="label_minutelyforecast" xml:space="preserve">
+    <value>Minutely</value>
   </data>
   <data name="Precipitation_Minutely_Starting_Text_Format" xml:space="preserve">
     <value>Rain will start in about {0}</value>
@@ -813,7 +936,40 @@
   <data name="api_eccc" xml:space="preserve">
     <value>Environment and Climate Change Canada (ECCC)</value>
   </data>
+  <data name="text_label_value" xml:space="preserve">
+    <value>%1$s %2$s</value>
+  </data>
+  <data name="label_count_low_short" xml:space="preserve">
+    <value>Low</value>
+  </data>
+  <data name="label_count_moderate_short" xml:space="preserve">
+    <value>Medium</value>
+  </data>
+  <data name="label_count_high_short" xml:space="preserve">
+    <value>High</value>
+  </data>
+  <data name="label_count_veryhigh_short" xml:space="preserve">
+    <value>V. High</value>
+  </data>
   <data name="werror_ratelimited" xml:space="preserve">
     <value>Too many requests. Please try again after a few minutes</value>
+  </data>
+  <data name="werror_locationnotsupported" xml:space="preserve">
+    <value>Location not supported by this weather provider</value>
+  </data>
+  <data name="api_accuweather" xml:space="preserve">
+    <value>AccuWeather</value>
+  </data>
+  <data name="Precipitation_Likely_Text_Format" xml:space="preserve">
+    <value>Rain likely around {0} ({1}% chance)</value>
+    <comment>{0} - Time, {1} - %Chance</comment>
+  </data>
+  <data name="Precipitation_Likely_Minutely_Starting_Text_Format" xml:space="preserve">
+    <value>Rain expected to start around {0}</value>
+    <comment>{0} - Time</comment>
+  </data>
+  <data name="Precipitation_Likely_Minutely_Stopping_Text_Format" xml:space="preserve">
+    <value>Rain expected to stop around {0}</value>
+    <comment>{0} - Time</comment>
   </data>
 </root>
