--- a/SimpleWeather.Shared/Resources/Strings/Resources.sk.resx
+++ b/SimpleWeather.Shared/Resources/Strings/Resources.sk.resx
@@ -172,11 +172,18 @@
   <data name="label_back" xml:space="preserve">
     <value>Späť</value>
   </data>
+  <data name="title_activity_weather_now" xml:space="preserve">
+    <value>Počasie</value>
+    <comment>MainActivity</comment>
+  </data>
   <data name="action_settings" xml:space="preserve">
     <value>Nastavenia</value>
   </data>
   <data name="action_retry" xml:space="preserve">
     <value>Opakovať</value>
+  </data>
+  <data name="placeholder_text" xml:space="preserve">
+    <value>•</value>
   </data>
   <data name="label_details" xml:space="preserve">
     <value>Detaily</value>
@@ -220,6 +227,7 @@
   </data>
   <data name="label_chance" xml:space="preserve">
     <value>Šanca</value>
+    <comment>Chance of Precipitation</comment>
   </data>
   <data name="label_cloudiness" xml:space="preserve">
     <value>Oblačnosť</value>
@@ -261,6 +269,9 @@
     <value>UV index</value>
   </data>
   <data name="label_airquality" xml:space="preserve">
+    <value>Index kvality ovzdušia</value>
+  </data>
+  <data name="label_airquality_short" xml:space="preserve">
     <value>Index kvality ovzdušia</value>
   </data>
   <data name="label_radar" xml:space="preserve">
@@ -328,6 +339,9 @@
   <data name="pref_category_providers" xml:space="preserve">
     <value>Poskytovatelia dát</value>
   </data>
+  <data name="copyright_here" xml:space="preserve">
+    <value>The HERE Logo is a trademark or registered trademark of HERE Global B.V.</value>
+  </data>
   <data name="pref_summary_currentlocation" xml:space="preserve">
     <value>Povoliť prístup k aktuálnej polohe cez GPS</value>
   </data>
@@ -337,14 +351,26 @@
   <data name="message_enter_apikey" xml:space="preserve">
     <value>Vložte prosím kľúč poskytovateľa</value>
   </data>
+  <data name="message_keyverified" xml:space="preserve">
+    <value>Kľúč overený</value>
+  </data>
+  <data name="message_keyinvalid" xml:space="preserve">
+    <value>Neplatný kľúč</value>
+  </data>
   <data name="pref_title_onnotification" xml:space="preserve">
     <value>Oznámenie o počasí</value>
+  </data>
+  <data name="pref_summary_notification" xml:space="preserve">
+    <value>Zobraziť trvalé oznámenie o aktuálnom počasí</value>
   </data>
   <data name="pref_title_api" xml:space="preserve">
     <value>Poskytovateľ počasia</value>
   </data>
   <data name="pref_category_notification" xml:space="preserve">
     <value>Oznámenia</value>
+  </data>
+  <data name="pref_title_notificationicon" xml:space="preserve">
+    <value>Ikona oznámenia</value>
   </data>
   <data name="pref_title_alerts" xml:space="preserve">
     <value>Meteovýstrahy</value>
@@ -383,6 +409,9 @@
   <data name="error_retrieve_location" xml:space="preserve">
     <value>Nie je možné získať polohu</value>
   </data>
+  <data name="error_enable_location_services" xml:space="preserve">
+    <value>Služba určovania polohy je vypnutá. Zapnite ju prosím v Nastaveniach</value>
+  </data>
   <data name="error_noresults" xml:space="preserve">
     <value>Žiadne výsledky k dispozícii </value>
   </data>
@@ -400,6 +429,10 @@
   </data>
   <data name="delete" xml:space="preserve">
     <value>Vymazať</value>
+  </data>
+  <data name="bg_location_permission_rationale" xml:space="preserve">
+    <value>Povoliť prístup k umiestneniu na pozadí pre oznámenia a widgety</value>
+    <comment>Background Location Permission</comment>
   </data>
   <data name="werror_noweather" xml:space="preserve">
     <value>Načítanie údajov o počasí nie je možné</value>
@@ -442,6 +475,41 @@
   <data name="update_prefix_day" xml:space="preserve">
     <value>Aktualizované</value>
   </data>
+  <data name="notificationicon_temperature" xml:space="preserve">
+    <value>Teplota</value>
+    <comment>Notification</comment>
+  </data>
+  <data name="notificationicon_condition" xml:space="preserve">
+    <value>Stav počasia</value>
+  </data>
+  <data name="not_channel_name_weather" xml:space="preserve">
+    <value>Oznámenia o počasí</value>
+  </data>
+  <data name="not_channel_desc_weather" xml:space="preserve">
+    <value>Oznámenia o počasí</value>
+  </data>
+  <data name="not_channel_name_alerts" xml:space="preserve">
+    <value>Meteovýstrahy</value>
+  </data>
+  <data name="not_channel_desc_alerts" xml:space="preserve">
+    <value>Oznámenia meteovýstrah</value>
+  </data>
+  <data name="not_channel_name_general" xml:space="preserve">
+    <value>Servisné oznámenia</value>
+  </data>
+  <data name="datetime_day_ago" xml:space="preserve">
+    <value>%1$dd dozadu</value>
+    <comment>Alerts</comment>
+  </data>
+  <data name="datetime_hr_ago" xml:space="preserve">
+    <value>%1$dh dozadu</value>
+  </data>
+  <data name="datetime_min_ago" xml:space="preserve">
+    <value>%1$dm dozadu</value>
+  </data>
+  <data name="datetime_sec_ago" xml:space="preserve">
+    <value>%1$ds dozadu</value>
+  </data>
   <data name="datetime_validuntil" xml:space="preserve">
     <value>Platné do:</value>
   </data>
@@ -461,6 +529,9 @@
   </data>
   <data name="userthememode_dark" xml:space="preserve">
     <value>Tmavý</value>
+  </data>
+  <data name="userthememode_black" xml:space="preserve">
+    <value>Tmavý (AMOLED)</value>
   </data>
   <data name="userthememode_light" xml:space="preserve">
     <value>Svetlý</value>
@@ -513,6 +584,28 @@
   </data>
   <data name="summary_default" xml:space="preserve">
     <value>Predvolené</value>
+  </data>
+  <data name="clock_12_hours_ampm_format" xml:space="preserve">
+    <value>h:mm&lt;small&gt;a&lt;/small&gt;</value>
+    <comment>format strings for clocks</comment>
+  </data>
+  <data name="clock_12_hours_format" xml:space="preserve">
+    <value>h:mm</value>
+  </data>
+  <data name="clock_24_hours_format" xml:space="preserve">
+    <value>HH:mm</value>
+  </data>
+  <data name="widget_long_date_format" xml:space="preserve">
+    <value>cccc, MMMM dd</value>
+    <comment>Widget: Full day and month</comment>
+  </data>
+  <data name="widget_4x2_date_format" xml:space="preserve">
+    <value>ccc, MMMM dd</value>
+    <comment>Widget: Abbreviated day and full month</comment>
+  </data>
+  <data name="widget_short_date_format" xml:space="preserve">
+    <value>ccc, MMM dd</value>
+    <comment>Widget: Abbreviated day and month</comment>
   </data>
   <data name="API_Box.PlaceholderText" xml:space="preserve">
     <value>Vybrať poskytovateľa počasia</value>
@@ -574,6 +667,14 @@
   </data>
   <data name="label_windgust" xml:space="preserve">
     <value>Nárazy vetra</value>
+  </data>
+  <data name="widget_4x1_date_format" xml:space="preserve">
+    <value>cccc, MMM dd</value>
+    <comment>Widget: Full day and abbreviated month</comment>
+  </data>
+  <data name="forecast_date_format" xml:space="preserve">
+    <value>EEE dd</value>
+    <comment>Forecast pattern: Day and date (ex. Mon 14)</comment>
   </data>
   <data name="CheckUpdatePrompt.Text" xml:space="preserve">
     <value>Kontrolujem aktualizácie...</value>
@@ -645,6 +746,12 @@
   </data>
   <data name="default_units_metric" xml:space="preserve">
     <value>°C, km/h, mm, mb, km</value>
+  </data>
+  <data name="radar_rainviewer" xml:space="preserve">
+    <value>RainViewer</value>
+  </data>
+  <data name="not_title_weather_update" xml:space="preserve">
+    <value>Aktualizuje sa počasie…</value>
   </data>
   <data name="FeatureOption_TileBackground.Content" xml:space="preserve">
     <value>Obrázok na pozadí miniatúry</value>
@@ -740,8 +847,22 @@ Fuzzy</comment>
   <data name="title_dev_settings" xml:space="preserve">
     <value>Dev Settings</value>
   </data>
+  <data name="bg_location_permission_rationale_settings" xml:space="preserve">
+    <value>Ak chcete aktualizovať polohu na pozadí pre oznámenia a miniaplikácie, nastavte povolenie polohy na &apos;%1$s&apos;</value>
+  </data>
   <data name="prompt_location_not_set" xml:space="preserve">
     <value>Poloha nie je stanovená. Prosím, pridajte umiestnenie</value>
+  </data>
+  <data name="title_bg_location_access" xml:space="preserve">
+    <value>Pozadie Prístup k polohe</value>
+    <comment>Background Location Permission
+Fuzzy</comment>
+  </data>
+  <data name="wear_bg_location_permission_rationale" xml:space="preserve">
+    <value>Povolenie prístupu k umiestneniu dlaždíc a komplikácií na pozadí</value>
+  </data>
+  <data name="wear_bg_location_permission_rationale_settings" xml:space="preserve">
+    <value>Ak chcete aktualizovať polohu na pozadí pre dlaždice a komplikácie, nastavte povolenie polohy na &apos;%1$s&apos;</value>
   </data>
   <data name="time_current" xml:space="preserve">
     <value>Aktuálne</value>
@@ -752,6 +873,10 @@ Fuzzy</comment>
   </data>
   <data name="api_tomorrowio" xml:space="preserve">
     <value>Tomorrow.io</value>
+  </data>
+  <data name="label_minutelyforecast" xml:space="preserve">
+    <value>Minútová predpoveď</value>
+    <comment>Fuzzy</comment>
   </data>
   <data name="Precipitation_Minutely_Starting_Text_Format" xml:space="preserve">
     <value>Dážď začne približne za {0}</value>
@@ -815,7 +940,40 @@ Fuzzy</comment>
   <data name="api_eccc" xml:space="preserve">
     <value>Environment and Climate Change Canada (ECCC)</value>
   </data>
+  <data name="text_label_value" xml:space="preserve">
+    <value>%1$s %2$s</value>
+  </data>
+  <data name="label_count_low_short" xml:space="preserve">
+    <value>Nízka</value>
+  </data>
+  <data name="label_count_moderate_short" xml:space="preserve">
+    <value>Stredná</value>
+  </data>
+  <data name="label_count_high_short" xml:space="preserve">
+    <value>Vysoká</value>
+  </data>
+  <data name="label_count_veryhigh_short" xml:space="preserve">
+    <value>Vysoká</value>
+  </data>
   <data name="werror_ratelimited" xml:space="preserve">
     <value>Príliš veľa požiadaviek. Prosím, skúste to znova po niekoľkých minútach</value>
+  </data>
+  <data name="werror_locationnotsupported" xml:space="preserve">
+    <value>Tento poskytovateľ počasia túto lokalitu nepodporuje.</value>
+  </data>
+  <data name="api_accuweather" xml:space="preserve">
+    <value>AccuWeather</value>
+  </data>
+  <data name="Precipitation_Likely_Text_Format" xml:space="preserve">
+    <value>Je pravdepodobné, že okolo {0} bude pršať ({1}% šanca)</value>
+    <comment>{0} - Time, {1} - %Chance</comment>
+  </data>
+  <data name="Precipitation_Likely_Minutely_Starting_Text_Format" xml:space="preserve">
+    <value>Očakáva sa, že dážď začne okolo {0}</value>
+    <comment>{0} - Time</comment>
+  </data>
+  <data name="Precipitation_Likely_Minutely_Stopping_Text_Format" xml:space="preserve">
+    <value>Očakáva sa, že dážď prestane okolo {0}</value>
+    <comment>{0} - Time</comment>
   </data>
 </root>
